--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 				var t = elements(by.tag('header')).elements(by.css('.user-block')).elements(by.attr('ng-model', 'email')).first().text();
 				if (t == 'a@x.com') 
 				{
-					alert('Задание выполнено :-)');
+					alert('Р—Р°РґР°РЅРёРµ РІС‹РїРѕР»РЅРµРЅРѕ :-)');
 				}
 				else
 				{	
-					alert('Задание не выполнено :-(');
+					alert('Р—Р°РґР°РЅРёРµ РЅРµ РІС‹РїРѕР»РЅРµРЅРѕ :-(');
 				}
 			</script>
 		</header>
