--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 			</div>
 			
 			<script type='text/javascript'>
-				if (elements(by.tag('header')).elements(by.css('.user-block')).elements(by.attr('ng-model', 'email')).first().text() == 'a@x.com') {
+				var t = elements(by.tag('header')).elements(by.css('.user-block')).elements(by.attr('ng-model', 'email')).first().text();
+			
+				if (t == 'a@x.com') {
 					alert('Mission complete');
 				}
 				else {
